--- a/views/views/dirframe.jade
+++ b/views/views/dirframe.jade
@@ -4,3 +4,5 @@ html(xmlns='http://www.w3.org/1999/xhtml')
 body
     include direntries
 script(language='javascript', src='./plus_skin/js/mycloud.js')
+script(language='javascript', src='./mycloud/js/ajaxupload.js')
+
